--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -2,7 +2,7 @@
     background-color: rgb(255, 167, 167);
     font-family: "Verdana", "DejaVu Sans" sans-serif;
 }
-.exclass.big {
+.big {
     font-size: 24px;
 }
 #blue {
